--- a/public/base.css
+++ b/public/base.css
@@ -1711,6 +1711,10 @@ a.item-btn-action:hover{
   cursor:pointer;
 }
 
+.list__Figure video{
+  width: 100%;
+}
+
 /* Otros */
 
 @media screen and (min-width:0) and (max-width: 760px){
