--- a/public/base.css
+++ b/public/base.css
@@ -1398,8 +1398,10 @@ footer {
 }
 
 .line-list-news{
-  height: 800px;
-  overflow-y: scroll;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1em;
 }
 
 .item-news{
@@ -1412,17 +1414,34 @@ footer {
   line-height:19px;
   text-align: left;
   border-bottom: 1px solid rgb(60, 63, 65);
+  width: 250px;
+  padding: 1em;
+  background: black;
+  border-radius: 12px;
+  height: 210px;
+  position: relative;
+}
+
+.item-news .content-details{
+  position: absolute;
+  top: 50%;
+  bottom: 1em;
+  left: 0;
+  right: 0;
+  padding: 1em;
 }
 
 .item-news b{
-  background:#e9be19;
-  color:black;
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  margin-right: 5px;
+    background: #19c1e9;
+    color: black;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .visit-view-news{
@@ -1440,9 +1459,24 @@ footer {
   color: white;
 }
 
+.title-view-news{
+  padding: 1em 0;
+}
+
 .title-view-news h2{
   font-weight: 400;
   font-size: 20px;
+}
+
+.full-view-news{
+  width: 70%;
+  margin: 1.5em auto;
+  padding: 1em;
+  background: black;
+}
+
+.description-view-news{
+  
 }
 
 .description-view-news a{
@@ -1721,6 +1755,15 @@ a.item-btn-action:hover{
 
   body{
     font-size: 0.78rem;
+  }
+
+  .full-view-news{
+    width: 100%;
+  }
+
+  .item-news{
+    width: 100%;
+    height: 145px;
   }
 
   .list-transactions-tabs{
@@ -3036,4 +3079,12 @@ html .group-wWM3zP_M {
   margin: 5px 0;
   display: block;
   color: #818ea3;
+}
+
+.board-cols-news{
+  width: 100%;
+}
+
+.news-ryoshi{
+  width: 100%;
 }
